# AdventOfCode2025

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-1/: Cargo.toml
day-1/benches/: benchmarks.rs
day-1/src/: part1.rs  part2.rs
day-2/: Cargo.toml
day-2/benches/: benchmarks.rs
day-2/src/: part1.rs  part2.rs
