[workspace]
members = [
    "day-*",
    "day-1",
]
resolver = "2"

[workspace.dependencies]
glam = "0.30"
itertools = "0.14"
nom = "8.0"
rayon = "1.11"
regex = "1.12"
rstest = "0.26"
rstest_reuse = "0.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[workspace.dependencies.criterion]
version = "0.7"
features = ["html_reports"]

[profile.flamegraph]
debug = 2
inherits = "release"
strip = "none"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
