[package]
name = "day-1"
version = "0.1.0"
edition = "2024"

[lints.clippy]
enum_glob_use = "deny"
module_name_repetitions = "warn"

[lints.clippy.nursery]
level = "deny"
priority = -1

[lints.clippy.pedantic]
level = "deny"
priority = -1

[lints.rust]
unsafe_code = "forbid"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
# tracing = { workspace = true }
# tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-1-bench"
path = "benches/benchmarks.rs"
harness = false
